--- a/openhpi/trunk/test/Makefile.am
+++ b/openhpi/trunk/test/Makefile.am
@@ -5,18 +5,20 @@
 
 MAINTAINERCLEANFILES = Makefile.in
 
-INCLUDES 		= -I$(top_srcdir)/include
+INCLUDES 		= -I$(top_srcdir)/include  	\
+			  -I$(top_srcdir)/include/utils
 
 COMMONLIBS		= $(top_srcdir)/lib/libopenhpi.la
 
 AM_CFAGS 		= @CFLAGS@
 
-bin_PROGRAMS		= hpitestapp
+bin_PROGRAMS		= hpitestapp hashtest
 
 hpitestapp_SOURCES	= hpitestapp.c
-
 hpitestapp_LDADD	= $(COMMONLIBS)
-
 hpitestapp_LDFLAGS	= -export-dynamic -dlpreopen force -dlopen self
 
 
+hashtest_SOURCES	= hashtest.c
+hashtest_LDADD		= $(COMMONLIBS) $(top_srcdir)/lib/utils/libhpiutils.la
+hashtest_LDFLAGS	= -export-dynamic -dlpreopen force -dlopen self
