--- a/openhpi/trunk/include/utils/Makefile.am
+++ b/openhpi/trunk/include/utils/Makefile.am
@@ -7,7 +7,8 @@ MAINTAINERCLEANFILES = Makefile.in
 
 includedir=$(base_includedir)/openhpi
 
-include_HEADERS	= hpi_hash.h hpi_primes.h
+include_HEADERS	= hpi_hash.h hpi_primes.h hpi_macros.h \
+		  hpi_list.h
 
 
 
