Adding the list test to the makefile

--- a/openhpi/trunk/test/Makefile.am
+++ b/openhpi/trunk/test/Makefile.am
@@ -12,13 +12,18 @@ COMMONLIBS		= $(top_srcdir)/lib/libopenhpi.la
 
 AM_CFLAGS 		= @CFLAGS@
 
-bin_PROGRAMS		= hpitestapp hashtest
+bin_PROGRAMS		= hpitestapp hashtest listtest
 
 hpitestapp_SOURCES	= hpitestapp.c
 hpitestapp_LDADD	= $(COMMONLIBS)
 hpitestapp_LDFLAGS	= -export-dynamic -dlpreopen force -dlopen self
 
-
 hashtest_SOURCES	= hashtest.c
 hashtest_LDADD		= $(top_srcdir)/lib/utils/libhpiutils.la
 hashtest_LDFLAGS	= -export-dynamic -dlpreopen force -dlopen self
+
+listtest_SOURCES	= listtest.c
+listtest_LDADD		= $(top_srcdir)/lib/utils/libhpiutils.la
+listtest_LDFLAGS	= -export-dynamic -dlpreopen force -dlopen self
+
+
