Removing old header files in preparation for the actual SA Forum's header file.

--- a/openhpi/trunk/include/Makefile.am
+++ b/openhpi/trunk/include/Makefile.am
@@ -7,13 +7,7 @@ MAINTAINERCLEANFILES = Makefile.in
 
 includedir=$(base_includedir)/openhpi
 
-include_HEADERS	= hpi_controls.h hpi_ctrlrdr.h hpi_eid.h \
-		  hpi_entities.h hpi_events2.h hpi_events.h \
- 		  safhpi.h hpi_hotswap.h hpi_invrdr.h \
-	   	  hpi_paramctrl.h hpi_rdr.h hpi_reset.h \
-		  hpi_rpt.h hpi_sel.h hpi_sensorrdr.h \
-		  hpi_sensors.h hpi_status.h hpi_types.h \
- 		  hpi_watchdog.h hpi_watchdogrdr.h
+include_HEADERS	= SaHpi.h 
 
 SUBDIRS		= utils
 
