Updating build scripts to reflect new docs directory and to remove files generated by configure when doing a make maintainer-clean

--- a/openhpi/trunk/Makefile.am
+++ b/openhpi/trunk/Makefile.am
@@ -46,7 +46,7 @@ EXTRA_DIST		= openhpi.spec
 
 AUTOMAKE_OPTIONS	= foreign
 
-MAINTAINERCLEANFILES 	= Makefile.in aclocal.m4 configure 
+MAINTAINERCLEANFILES 	= Makefile.in aclocal.m4 configure config.guess config.sub depcomp $(distdir).tar.gz
 
 SUBDIRS			= include lib test docs
 
