Added the missing BSD license to one of the makefiles.  Also updating the spec file so that it will properly build with the changes to the docs directory.  It does not yet include the documentation in the spec file though. Also updated the README file with a little more info about build and clean.

--- a/openhpi/trunk/docs/hld/Makefile.am
+++ b/openhpi/trunk/docs/hld/Makefile.am
@@ -35,14 +35,17 @@ MAINTAINERCLEANFILES 	= Makefile.in
 openhpi_docsdir		= $(datadir)/openhpi/docs/hld
 
 openhpi_docs_DATA	= \
-				OpenHPI_HLD/book1.html
+				OpenHPI_HLD/book1.html 
+
+
 
 SGML_FILES		= OpenHPI_HLD.sgml
 
 EXTRA_DIST		= implementation_view.png \
                           physical_view.png       \
                           domain_view.png	  \
-                          hld_diagram.gif
+                          hld_diagram.gif	  \
+			  OpenHPI_HLD.sgml
 
 all:
 
