* Removing 'test' directory and instead adding 'example' directory   (any test cases should be added to the test suite) * Moving source code from the 'lib' directory to the 'src' directory

--- a/openhpi/trunk/configure.in
+++ b/openhpi/trunk/configure.in
@@ -76,15 +76,16 @@ CC_WARNINGS="-Wall -Wmissing-prototypes \
 CFLAGS="$CFLAGS $CC_WARNINGS"
 
 
-AC_OUTPUT(openhpi.spec 		\
-	Makefile 		\
-	include/Makefile	\
-	include/utils/Makefile	\
-	lib/Makefile		\
-	lib/utils/Makefile	\
-	docs/Makefile		\
-	docs/hld/Makefile	\
-	test/Makefile		\
+AC_OUTPUT(openhpi.spec 		  \
+	Makefile 	 	  \
+	include/Makefile	  \
+	include/utils/Makefile	  \
+	src/Makefile		  \
+	src/plugins/Makefile      \
+	src/plugins/ipmi/Makefile \
+	docs/Makefile		  \
+	docs/hld/Makefile	  \
+	examples/Makefile         \
 )
 
 
