Removed extra Makefile.am files and changed toplevel make and config files to do what the removed Makefile.am files were doing before.

--- a/openhpi/trunk/Makefile.am
+++ b/openhpi/trunk/Makefile.am
@@ -41,15 +41,19 @@ RPMDIR			=$(HOME)/rpms
 RPMSRC	=$(DESTDIR)$(RPMDIR)/SRPMS/$(PACKAGE)-$(VERSION)-$(RPMREL).src.rpm
 RPM386	=$(DESTDIR)$(RPMDIR)/RPMS/i386/$(PACKAGE)-$(VERSION)-$(RPMREL).i386.rpm
 
-EXTRA_DIST		= openhpi.spec docs examples
+EXTRA_DIST		= openhpi.spec docs examples include
 
 AUTOMAKE_OPTIONS	= foreign
 
 MAINTAINERCLEANFILES 	= Makefile.in aclocal.m4 configure config.guess config.sub depcomp $(distdir).tar.gz
 
-SUBDIRS			= include src
+SUBDIRS			= src
 
 DISTCHECK_CONFIGURE_FLAGS = --with-initdir=prefix
+
+includedir=$(base_includedir)/openhpi
+
+include_HEADERS	= include/SaHpi.h 
 
 rpm: dist
 	$(RPM) $(RPMFLAGS) $(TARFILE) </dev/null;
@@ -63,5 +67,4 @@ hpi_examples:
 clean: am_config_clean
 am_config_clean:
 	rm -fr $(PACKAGE)-*.tar.gz
-
 
