--- a/openhpi/trunk/src/Makefile.am
+++ b/openhpi/trunk/src/Makefile.am
@@ -43,8 +43,8 @@ AM_CFLAGS		= @CFLAGS@
 
 lib_LTLIBRARIES		= libopenhpi.la
 
+libopenhpi_la_LIBADD    = $(COMMONLIBS)
 libopenhpi_la_SOURCES	= safhpi.c resource.c domain.c session.c
-
 libopenhpi_la_LDFLAGS	= -version-info 0:0:0
 
 
