stepwise improvements in hld docbook structure by further modularizing the document. * Legal notices is now isolated to legal.dtd * Author specifics is not isolated to authors.dtd * Revision history is not isolated to revisions.dtd

--- a/openhpi/trunk/docs/hld/Makefile.am
+++ b/openhpi/trunk/docs/hld/Makefile.am
@@ -39,7 +39,10 @@ openhpi_docs_DATA	= \
 
 
 
-SGML_FILES		= OpenHPI_HLD.sgml
+SGML_FILES		= OpenHPI_HLD.sgml \
+                          legal.dtd \
+                          authors.dtd \
+                          revisions.dtd
 
 EXTRA_DIST		= implementation_view.png \
                           physical_view.png       \
