--- a/hpi-cim-provider/trunk/configure.ac
+++ b/hpi-cim-provider/trunk/configure.ac
@@ -4,7 +4,7 @@
 AC_PREREQ(2.57)
 AC_INIT(CMPI HPI-CIM Provider, 0.1.0, renierm@us.ibm.com, HpiCimProvider)
 # CHANGE THIS TO THE RELATIVE PATHNAME OF *ONE* OF THE SOURCE FILES
-AC_CONFIG_SRCDIR([src/HpiCimProvider.c])
+AC_CONFIG_SRCDIR([src/Hpi.c])
 AM_INIT_AUTOMAKE([1.8])
 
 # DECLARE ANY SPECIAL CUSTOM CONFIGURE COMMAND LINE OPTIONS HERE
