--- a/hpi-cim-provider/trunk/src/Makefile.am
+++ b/hpi-cim-provider/trunk/src/Makefile.am
@@ -2,9 +2,10 @@
 MAINTAINERCLEANFILES    = Makefile.in
 MOSTLYCLEANFILES        = @TEST_CLEAN@
 
-AM_CFLAGS		= @CPPFLAGS@ @OPENHPI_CFLAGS@
+INCLUDES		= @OPENHPI_CFLAGS@ @CMPI_CFLAGS@
+AM_CFLAGS		= @CFLAGS@
 
-# providerdir defines where provider libraries will be installed (@PROVIDERDIR@ is setby the configure script).
+# providerdir defines where provider libraries will be installed (PROVIDERDIR is setby the configure script).
 providerdir = @PROVIDERDIR@
 
 # ==================================================================
@@ -14,7 +15,7 @@ providerdir = @PROVIDERDIR@
 
 # LIST EACH CMPI CLASS PROVIDER LIBRARY, ITS SOURCE FILE(S), AND ANY LIBS REQUIRED FORLINKING HERE
 # Files and Directories CMPI provider libraries
-provider_LTLIBRARIES = libHpi.la
-libHpi_la_SOURCES = Hpi.c
+provider_LTLIBRARIES = libHpiCimProvider.la
+libHpiCimProvider_la_SOURCES = HpiCimProvider.c
 
-libHpi_la_LDFLAGS   = @OPENHPI_LIBS@ -version-info @HPI_CIM_VERSION@ 
+libHpiCimProvider_la_LDFLAGS   = @OPENHPI_LIBS@ -version-info @HPI_CIM_VERSION@ 
