--- a/hpi-cim-provider/trunk/configure.ac
+++ b/hpi-cim-provider/trunk/configure.ac
@@ -21,10 +21,7 @@ fi
 # ADD CHECKS FOR ANY SPECIAL REQUIRED HEADER FILES HERE
 AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
 
-OPENHPI_CFLAGS=`PKG_CONFIG_PATH="/usr/local/lib/pkgconfig" pkg-config --cflags openhpi 2>/dev/null`
-if test -z "$OPENHPI_CFLAGS"; then
-    MY_CHECK_FAIL(openhpi,openhpi,http://openhpi.sf.net)
-fi
+CHECK_OPENHPI_HEADERS
 AC_SUBST(OPENHPI_CFLAGS)
 
 # ADD CHECKS FOR ANY SPECIAL REQUIRED LIBRARIES
@@ -59,6 +56,7 @@ AC_HEADER_STDC
 
 # Check for required CMPI header files (defined in acinclude.m4)
 CHECK_CMPI
+AC_SUBST(CMPI_CFLAGS)
 
 # Check for required libraries (defined in acinclude.m4)
 CHECK_PROVIDERDIR
